syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetingManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    int32 magic_number = 1;
}

message LongGreetResponse {
    int32 result = 1;
}

message BiGreetRequest {
    int32 small_number = 1;
}

message BiGreetResponse {
    int32 large_number = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetingResponse) {};

    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetingManyTimesResponse) {};

    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}; 

    rpc BiGreet(stream BiGreetRequest) returns (stream BiGreetResponse) {};

    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}

